# sys-widget

./: .gitignore  CLAUDE.md  README.md  collectors.py  install_startup.ps1  main.py  monitor.py  package-lock.json  package.json  release.ps1  requirements.txt  startup.py  sysmon_widget.spec  updater.py  vite.config.js  widget.py
.github/workflows/: check.yml  release.yml
docs/superpowers/plans/: 2026-05-28-tauri-migration-plan1-core-widget.md  2026-05-29-ui-refonte-b1.md  2026-05-31-settings-panel.md
docs/superpowers/specs/: 2026-05-29-ui-refonte-b1.md  2026-05-31-settings-panel-design.md
hardware/: read_temp.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/hardware/: read_temp.ps1
src-tauri/src/: lhm.rs  lib.rs  main.rs  models.rs  monitor.rs  startup.rs
src/lib/: i18n.ts
src/lib/components/: ContextMenu.svelte  DiskRow.svelte  MetricRow.svelte  NetworkRow.svelte  SettingsPanel.svelte  Sparkline.svelte  UpdateBanner.svelte
src/lib/stores/: metrics.svelte.ts  settings.svelte.ts
src/lib/utils/: colors.test.ts  colors.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
