[package]
name = "sysmon-widget"
version = "2.0.3"
description = "SysmonWidget — system monitoring overlay for Windows"
authors = ["CorentinG21"]
edition = "2021"

[lib]
name = "sysmon_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
